--- a/travel/templates/destinations/show.html
+++ b/travel/templates/destinations/show.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% from 'bootstrap5/form.html' import render_form %}
 
@@ -8,13 +8,13 @@
     <div class="row mt-5 mb-3">  
       <div class="col-md-12">  
         <div class="float-left">  
-          <h1 class="mb-0">{{destination.name}}</h1>  
-          <p>{{destination.description}}</p>  
+          <h1 class="mb-0">{{ destination.name }}</h1>  
+          <p>Popular Destination</p>  
         </div>  
  
         <div class="float-right text-right">  
           <p class="mb-0">1 AUD equals</p>  
-          <h2 id="exchange-rate">{{destination.currency}}</h2>  
+          <h2 id="exchange-rate">0.62 {{ destination.currency }}</h1>  
         </div>  
       </div>  
     </div>  
@@ -25,11 +25,11 @@
         <div class="card my-3">  
           <div class="card-body">  
             <div class="media">  
-              <img class="align-self-start mr-3" src="{{destination.image}}" alt="Image of {{destination.name}}" style="max-width: 250px;">  
+              <img class="align-self-start mr-3" src="{{ destination.image }}">  
               <div class="media-body">  
                 <small class="font-weight-bold text-muted">Stay 2 nights</small>  
-                <h5 class="mt-0">{{destination.name}}</h5>  
-                <p>{{destination.description}}</p>  
+                <h5 class="mt-0">{{ destination.name }}</h5>  
+                <p>{{ destination.description }}</p>  
                 <a href="#" class="btn btn-danger">Book Now</a>  
               </div>  
             </div>  
@@ -41,21 +41,20 @@
     <!-- Comments -->  
     <div class="row">  
       <div class="col-md-12">  
-        <h2>Comments</h2>  
+        <h2>Comments</h1>  
       </div>  
     </div>  
-
-    {{render_form(form,"/destinations/{0}/comment".format(destination.id))}}
-
-
-    {% for comment in destination.comments %}
-    <div class="row border-bottom">  
+ 
+    <div class="row border-bottom"> 
+      {{ render_form(form,"/destinations/{0}/comment".format(destination.id)) }}
+      
+      {% for comment in destination.comments %}
       <div class="col-md-12">  
-        <b>{{comment.user}}<span class="ml-2 text-muted">{{comment.created_at.strftime("%m/%d/%Y, %H:%M")}}</span></b>  
-        <p>{{comment.text}}</p>  
-      </div>  
+        <b>{{ comment.user.name }} <span class="ml-2 text-muted">January 2024</span></b>
+        <p>{{ comment.text }}</p>  
+      </div> 
+      {% endfor %} 
     </div>  
-  {% endfor %}
   </div> 
 
 {% endblock %}
